Pass DeployState - no functional changes